Fixes #12939 !strict. Fixed the Heading's center-align problem. Changed the dom structure.
git-svn-id: http://svn.dojotoolkit.org/src/dojox/trunk@24885 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/mobile/themes/common/Heading.less
+++ b/mobile/themes/common/Heading.less
@@ -8,6 +8,18 @@
 	text-overflow: ellipsis;
 	.mblHeading-styles;
 }
+.mblHeadingDivTitle {
+	position: absolute;
+	width: 100%;
+	display: none;
+	z-index: -1;
+}
+.mblHeadingCenterTitle .mblHeadingDivTitle {
+	display: block;
+}
+.mblHeadingCenterTitle .mblHeadingSpanTitle {
+	display: none;
+}
 
 /* Heading Arrow Button */
 .mblArrowButton {
